# vpn-project

./: README.md  meson.build  org.gnome.Example.json
data/: org.gnome.Example.desktop.in  org.gnome.Example.gschema.xml
po/: meson.build
src/: main.py  meson.build  vpn-project.in  wg-install.py  window.py  window.ui
